--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">你好呀</span>
+        <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">徐燕</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">认识你是最幸运的事!</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">It's your birthday!!! :D</p>
+      <p data-node-name="text1">今天是你的生日!!! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you!! Yeee! Many many happy blah...</p>
-        <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">祝你生日快乐...</p>
+        <p class="fake-btn" data-node-name="sendButtonLabel">发送</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+      <p class="idea-1" data-node-name="text2">这样有点太普通了</p>
+      <p class="idea-2" data-node-name="text3">我觉得</p>
       <p class="idea-3">
-        <span data-node-name="text4">I realised, I wanted to do something</span>
-        <strong data-node-name="text4Adjective">special</strong>.</p>
+        <span data-node-name="text4">我需要做点别的</span>
+        <strong data-node-name="text4Adjective">一个惊喜</strong>.</p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
@@ -120,8 +120,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p data-node-name="outroText">喜欢吗</p>
+      <p id="replay" data-node-name="replayText">嘿嘿嘿</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
